must-gather.local.7541592903822836477/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-ccdc0abcf68b276b781a774d7630503a6b323c7cedea8e5636b09dd759dd226a/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/network-node-identity.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2024-06-11T11:08:10Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:ownerReferences:
          k:{"uid":"62ee1ce2-90a7-43aa-95fc-751c249264a6"}: {}
      f:webhooks:
        k:{"name":"node.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
        k:{"name":"pod.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2024-06-11T11:08:10Z"
  name: network-node-identity.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: 62ee1ce2-90a7-43aa-95fc-751c249264a6
  resourceVersion: "29141"
  uid: f03f5513-f1da-492e-ab88-5fb1e93e440c
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJSmVVK2dvYmFlTUV3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjeE9ERXdNamd6TURBZUZ3MHlOREEyTVRFeE1EUTNNRGxhRncwek5EQTJNRGt4Ck1EUTNNVEJhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM01UZ3hNREk0TXpBd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/node
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: node.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - nodes/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJSmVVK2dvYmFlTUV3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjeE9ERXdNamd6TURBZUZ3MHlOREEyTVRFeE1EUTNNRGxhRncwek5EQTJNRGt4Ck1EUTNNVEJhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM01UZ3hNREk0TXpBd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/pod
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: pod.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - pods/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
